changed font color

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #080808;
+$secondary-color: #545f5d;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #090524; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
